--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.1.0"
+version = "1.1.1"
 group = "ftblag.fluidcows"
 archivesBaseName = "FluidCows"
 
@@ -55,4 +55,10 @@ processResources {
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
+}
+
+jar {
+   manifest {
+       attributes 'FMLAT': 'fluidcows_at.cfg'
+   }
 }
